--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -4,7 +4,7 @@
 	"description":"A set of tools to help you edit and setup avatars faster and easier.",
 	"classname":"Pumkin.AvatarTools.PumkinsAvatarTools",
 	"settings_file_name":"",
-	"requirement":{"type":"EDITOR_VERSION","data":">=1.0"},
+	"requirement":{"type":"VRC_SDK_VERSION","data":">=0.0"},
 	"files":
 	[
 		"Resources/Icons/kofi-logo.png",
