--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -1,7 +1,7 @@
 {
 	"name":"Pumkin's Avatar Tools",
 	"version":0.7,
-	"description":"A set of tools to help you setup and avatars easier. Also includes a component copier and tools to make thumbnails.",
+	"description":"A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
 	"classname":"Pumkin.AvatarTools.PumkinsAvatarTools",
 	"settings_file_name":"",
 	"requirement":{"type":"VRC_SDK_VERSION","data":">=0.0"},
