--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -2,7 +2,7 @@
     "name": "Pumkin's Avatar Tools",
     "description": "A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
     "classname": "Pumkin.AvatarTools.PumkinsAvatarTools",
-    "version": 0.71,
+    "version": 0.72,
     "requirement": {
         "type": "VRC_SDK_VERSION",
         "data": ">=0.0"
@@ -32,17 +32,20 @@
         "Resources/Presets/Cameras/Example Images/fg_gridguide.png",
         "Resources/Presets/Cameras/Example Images/fg_vignette.png",
         "Resources/Presets/Poses/Arms Stretched.asset",
-        "Resources/Presets/Poses/Hands Behind (Transform).asset",
-        "Resources/Presets/Poses/Hands Behind.asset",
+        "Resources/Presets/Poses/hands behind.asset",
         "Resources/Presets/Poses/Presenting.asset",
         "Resources/Presets/Poses/Sitting.asset",
         "Resources/Presets/Poses/Talking.asset",
-        "Resources/Translations/LANGUAGE_LOUD_EXAMPLE.asset",
+        "Resources/Translations/chinese.asset",
+        "Resources/Translations/Language_Chinese_preset.preset",
+        "Resources/Translations/LANGUAGE_LOUD_PRESET.preset",
+        "Resources/Translations/loud.asset",
         "Scripts/Dependencies/SingletonScriptableObject.cs",
         "Scripts/Dependencies/Editor/EditorCoroutine.cs",
         "Scripts/Dependencies/Editor/ScriptableObjectUtility.cs",
         "Scripts/Dependencies/Editor/ScriptDefinesManager.cs",
         "Scripts/Editor/PumkinsAvatarTools.cs",
+        "Scripts/Editor/PumkinsCompileErrorListener.cs",
         "Scripts/Editor/PumkinsDataStructures.cs",
         "Scripts/Editor/PumkinsExtensions.cs",
         "Scripts/Editor/PumkinsHelperFunctions.cs",
