Fixed remove missing scripts and scene view overlays

--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Pumkin's Avatar Tools",
+    "name": "PUMKIN'S AVATAR TOOLS",
     "description": "A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
     "classname": "Pumkin.AvatarTools.PumkinsAvatarTools",
     "version": 0.72,
@@ -36,25 +36,24 @@
         "Resources/Presets/Poses/Presenting.asset",
         "Resources/Presets/Poses/Sitting.asset",
         "Resources/Presets/Poses/Talking.asset",
-        "Resources/Translations/chinese.asset",
-        "Resources/Translations/Language_Chinese_preset.preset",
-        "Resources/Translations/LANGUAGE_LOUD_PRESET.preset",
-        "Resources/Translations/loud.asset",
+        "Resources/Translations/language_chinese.asset",
+        "Resources/Translations/LANGUAGE_LOUD_EXAMPLE.asset",
         "Scripts/Dependencies/SingletonScriptableObject.cs",
         "Scripts/Dependencies/Editor/EditorCoroutine.cs",
         "Scripts/Dependencies/Editor/ScriptableObjectUtility.cs",
         "Scripts/Dependencies/Editor/ScriptDefinesManager.cs",
         "Scripts/Editor/PumkinsAvatarTools.cs",
         "Scripts/Editor/PumkinsCompileErrorListener.cs",
-        "Scripts/Editor/PumkinsDataStructures.cs",
-        "Scripts/Editor/PumkinsExtensions.cs",
-        "Scripts/Editor/PumkinsHelperFunctions.cs",
-        "Scripts/Editor/PumkinsMuscleEditor.cs",
-        "Scripts/Editor/PumkinsMuscleEditorUtils.cs",
-        "Scripts/Editor/PumkinsPoseEditor.cs",
-        "Scripts/Editor/PumkinsStrings.cs",
         "Scripts/Editor/_DependencyChecker.cs",
         "Scripts/Editor/_PumkinsAvatarToolsWindow.cs",
+        "Scripts/Editor/Data/PumkinsAvatarInfo.cs",
+        "Scripts/Editor/Data/PumkinsDataStructures.cs",
+        "Scripts/Editor/Data/PumkinsStrings.cs",
+        "Scripts/Editor/Helpers/PumkinsExtensions.cs",
+        "Scripts/Editor/Helpers/PumkinsHelperFunctions.cs",
+        "Scripts/Editor/Pose Editor/PumkinsMuscleEditor.cs",
+        "Scripts/Editor/Pose Editor/PumkinsMuscleEditorUtils.cs",
+        "Scripts/Editor/Pose Editor/PumkinsPoseEditor.cs",
         "Scripts/Editor/Presets/PumkinsBlendshapePreset.cs",
         "Scripts/Editor/Presets/PumkinsCameraPreset.cs",
         "Scripts/Editor/Presets/PumkinsPosePreset.cs",
