--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "PUMKIN'S AVATAR TOOLS",
+    "name": "Pumkin's Avatar Tools",
     "description": "A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
     "classname": "Pumkin.AvatarTools.PumkinsAvatarTools",
     "version": 0.72,
