Moved muscle editor stuff to pose editor, moved some enums from main script to their scripts

--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -18,13 +18,13 @@
         "Resources/Icons/settings-icon.png",
         "Resources/Materials/PumkinsThumbnailCamRT.renderTexture",
         "Resources/Materials/PumkinsThumbnailCamUnlit.mat",
-        "Resources/Pose Editor/PumkinsPoseEditorAnimator.controller",
         "Resources/Presets/Blendshapes/Annoyed.asset",
         "Resources/Presets/Blendshapes/V Eyes.asset",
         "Resources/Presets/Blendshapes/Wink.asset",
         "Resources/Presets/Blendshapes/^ Mouth.asset",
         "Resources/Presets/Cameras/Bad Thumbnail.asset",
         "Resources/Presets/Cameras/Presenting Pink.asset",
+        "Resources/Presets/Cameras/Profile.asset",
         "Resources/Presets/Cameras/Simple Dark.asset",
         "Resources/Presets/Cameras/Example Images/bg_diagonal_stripes.png",
         "Resources/Presets/Cameras/Example Images/bg_diagonal_stripes_bw.png",
@@ -53,9 +53,8 @@
         "Scripts/Editor/Data/PumkinsStrings.cs",
         "Scripts/Editor/Helpers/PumkinsExtensions.cs",
         "Scripts/Editor/Helpers/PumkinsHelperFunctions.cs",
-        "Scripts/Editor/Pose Editor/PumkinsMuscleEditor.cs",
-        "Scripts/Editor/Pose Editor/PumkinsMuscleEditorUtils.cs",
         "Scripts/Editor/Pose Editor/PumkinsPoseEditor.cs",
+        "Scripts/Editor/Pose Editor/PumkinsPoseEditorUtils.cs",
         "Scripts/Editor/Presets/PumkinsBlendshapePreset.cs",
         "Scripts/Editor/Presets/PumkinsCameraPreset.cs",
         "Scripts/Editor/Presets/PumkinsPosePreset.cs",
