Added scale ruler; release candidate

--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -10,14 +10,14 @@
     "files": [
         "LICENSE",
         "README.md",
+        "Resources/CameraRT/PumkinsThumbnailCamRT.renderTexture",
+        "Resources/CameraRT/PumkinsThumbnailCamUnlit.mat",
         "Resources/Icons/bone-icon.png",
         "Resources/Icons/bonecollider-icon.png",
         "Resources/Icons/discord-logo.png",
         "Resources/Icons/github-logo.png",
         "Resources/Icons/kofi-logo.png",
         "Resources/Icons/settings-icon.png",
-        "Resources/Materials/PumkinsThumbnailCamRT.renderTexture",
-        "Resources/Materials/PumkinsThumbnailCamUnlit.mat",
         "Resources/Presets/Blendshapes/Annoyed.asset",
         "Resources/Presets/Blendshapes/V Eyes.asset",
         "Resources/Presets/Blendshapes/Wink.asset",
@@ -36,6 +36,9 @@
         "Resources/Presets/Poses/Presenting.asset",
         "Resources/Presets/Poses/Sitting.asset",
         "Resources/Presets/Poses/Talking.asset",
+        "Resources/ScaleRuler/lineup_prefab.prefab",
+        "Resources/ScaleRuler/lineup_wall.fbx",
+        "Resources/ScaleRuler/lineup_wall_material.mat",
         "Resources/Translations/language_chinese_preset.preset",
         "Resources/Translations/LANGUAGE_LOUD_PRESET.preset",
         "Scripts/Dependencies/SingletonScriptableObject.cs",
