--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -40,7 +40,9 @@
         "Resources/ScaleRuler/lineup_wall.fbx",
         "Resources/ScaleRuler/lineup_wall_material.mat",
         "Resources/Translations/language_chinese_preset.preset",
+        "Resources/Translations/language_LOUD ENGLISH.asset",
         "Resources/Translations/LANGUAGE_LOUD_PRESET.preset",
+        "Resources/Translations/language_中文.asset",
         "Scripts/Dependencies/SingletonScriptableObject.cs",
         "Scripts/Dependencies/Editor/EditorCoroutine.cs",
         "Scripts/Dependencies/Editor/ScriptableObjectUtility.cs",
