--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -2,7 +2,7 @@
     "name": "Pumkin's Avatar Tools",
     "description": "A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
     "classname": "Pumkin.AvatarTools.PumkinsAvatarTools",
-    "version": 0.96,
+    "version": 1.0,
     "requirement": {
         "type": "VRC_SDK_VERSION",
         "data": ">=0.0"
@@ -24,7 +24,13 @@
         "Resources/Icons/bonecollider-icon.png",
         "Resources/Icons/discord-logo.png",
         "Resources/Icons/github-logo.png",
+        "Resources/Icons/icon_link.png",
+        "Resources/Icons/icon_link_pro.png",
         "Resources/Icons/kofi-logo.png",
+        "Resources/Icons/phys-bone-icon.png",
+        "Resources/Icons/phys-bonecollider-icon.png",
+        "Resources/Icons/receiver-icon.png",
+        "Resources/Icons/sender-icon.png",
         "Resources/Icons/settings-icon.png",
         "Resources/Presets/Blendshapes/Annoyed.asset",
         "Resources/Presets/Blendshapes/V Eyes.asset",
@@ -43,10 +49,24 @@
         "Resources/Presets/Poses/Presenting.asset",
         "Resources/Presets/Poses/Sitting.asset",
         "Resources/Presets/Poses/Talking.asset",
+        "Resources/Presets/Poses/_1_sides.asset",
+        "Resources/Presets/Poses/_armsUP.asset",
+        "Resources/Presets/Poses/_back.asset",
+        "Resources/Presets/Poses/_forward.asset",
+        "Resources/Presets/Poses/_up.asset",
+        "Resources/RecalculatePoses/pose1.anim",
+        "Resources/RecalculatePoses/pose2.anim",
+        "Resources/RecalculatePoses/pose3.anim",
+        "Resources/RecalculatePoses/pose4.anim",
+        "Resources/RecalculatePoses/pose5.anim",
+        "Resources/RecalculatePoses/pose6.anim",
+        "Resources/RecalculatePoses/pose7.anim",
         "Resources/ScaleRuler/lineup_prefab.prefab",
         "Resources/ScaleRuler/lineup_wall.fbx",
         "Resources/ScaleRuler/lineup_wall_black.mat",
         "Resources/ScaleRuler/lineup_wall_white.mat",
+        "Resources/TexturePacker/PumkinsTexturePacker.shader",
+        "Resources/TexturePacker/PumkinsTextureUnpacker.shader",
         "Resources/Translations/LANGUAGE_LOUD_EXAMPLE.asset",
         "Resources/Translations/language_中文.asset",
         "Scripts/Dependencies/SingletonScriptableObject.cs",
@@ -87,7 +107,10 @@
         "Scripts/Editor/Presets/Popups/CreateCameraPresetPopup.cs",
         "Scripts/Editor/Presets/Popups/CreatePosePresetPopup.cs",
         "Scripts/Editor/Presets/Popups/CreatePresetPopupBase.cs",
+        "Scripts/Editor/Textuer Packer/PumkinsTexturePackerEditor.cs",
+        "Scripts/Editor/Textuer Packer/PumkinsTexturePackerHelpers.cs",
         "Scripts/Editor/Tools/PumkinTool.cs",
+        "Scripts/Editor/Tools/RecalculateBoundsTool.cs",
         "Scripts/Editor/Translations/PumkinsLanguageManager.cs",
         "Scripts/Editor/Translations/PumkinsTranslation.cs",
         "Scripts/Editor/Translations/PumkinsYAMLTools.cs"
