Added FinalIK copier and some other stuff. Remind me to commit more often

--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -82,6 +82,7 @@
         "Scripts/Editor/_DependencyChecker.cs",
         "Scripts/Editor/_PumkinsAvatarToolsWindow.cs",
         "Scripts/Editor/Callbacks/AvatarUploadHider.cs",
+        "Scripts/Editor/Copiers/GenericCopier.cs",
         "Scripts/Editor/Copiers/LegacyCopier.cs",
         "Scripts/Editor/Data/PumkinsAvatarInfo.cs",
         "Scripts/Editor/Data/PumkinsDataStructures.cs",
