--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -2,7 +2,7 @@
     "name": "Pumkin's Avatar Tools",
     "description": "A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
     "classname": "Pumkin.AvatarTools.PumkinsAvatarTools",
-    "version": 1.20,
+    "version": 1.21,
     "requirement": {
         "type": "VRC_SDK_VERSION",
         "data": ">=0.0"
@@ -105,8 +105,8 @@
         "Scripts/Editor/Presets/Popups/CreateCameraPresetPopup.cs",
         "Scripts/Editor/Presets/Popups/CreatePosePresetPopup.cs",
         "Scripts/Editor/Presets/Popups/CreatePresetPopupBase.cs",
-        "Scripts/Editor/Textuer Packer/PumkinsTexturePackerEditor.cs",
-        "Scripts/Editor/Textuer Packer/PumkinsTexturePackerHelpers.cs",
+        "Scripts/Editor/Texture Packer/PumkinsTexturePackerEditor.cs",
+        "Scripts/Editor/Texture Packer/PumkinsTexturePackerHelpers.cs",
         "Scripts/Editor/Tools/PumkinTool.cs",
         "Scripts/Editor/Tools/RecalculateBoundsTool.cs",
         "Scripts/Editor/Translations/PumkinsLanguageManager.cs",
