--- a/thry_module_manifest.json
+++ b/thry_module_manifest.json
@@ -2,7 +2,7 @@
     "name": "Pumkin's Avatar Tools",
     "description": "A set of tools to help you setup avatars easier.\nIncludes a component copier and tools to make thumbnails.\nTo launch the tools go to Tools > Pumkin > Avatar Tools.",
     "classname": "Pumkin.AvatarTools.PumkinsAvatarTools",
-    "version": 1.3,
+    "version": 1.31,
     "requirement": {
         "type": "VRC_SDK_VERSION",
         "data": ">=0.0"
@@ -77,6 +77,7 @@
         "Scripts/Editor/_DependencyChecker.cs",
         "Scripts/Editor/_PumkinsAvatarToolsWindow.cs",
         "Scripts/Editor/Callbacks/AvatarUploadHider.cs",
+        "Scripts/Editor/Copiers/CopyInstance.cs",
         "Scripts/Editor/Copiers/GenericCopier.cs",
         "Scripts/Editor/Copiers/LegacyCopier.cs",
         "Scripts/Editor/Data/PumkinsAvatarInfo.cs",
