--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "version": "1.3.7",
   "description": "An editor script that adds tools to help you setup avatars faster and easier. It includes a component copier that makes it a lot easier to reimport your avatars, and tools to make your thumbnails nicer.",
   "gitDependencies": {},
-  "vpmDependencies": {
-    "com.vrchat.avatars": "3.1.10"
-  },
+  "vpmDependencies": {},
   "legacyFolders": {},
   "legacyFiles": {},
   "localPath": ".\\Packages\\pumkin.pumkinsavatartools",
