--- a/package.json
+++ b/package.json
@@ -15,5 +15,5 @@
   "license": "MIT",
   "unity": "2019.4",
   "type": "tool",
-  "localPath": ".\\Packages\\io.github.rurre.pumkinsavatartools",
+  "localPath": ".\\Packages\\io.github.rurre.pumkinsavatartools"
 }
